--- a/CrazyBurger/static/bootstrap/bcss/style.css
+++ b/CrazyBurger/static/bootstrap/bcss/style.css
@@ -21,15 +21,13 @@
     HEADER
 -------------------------------------------------------------------*/
 .top-navbar{
-	position: relative;
 	z-index: 10;
 }
 
 .top-navbar .navbar{
 	padding: 0px 0px;
-	position: fixed;
 	width: 100%;
-	transition: height .3s ease-out, background .3s ease-out, box-shadow .3s ease-out;
+	transition: height .3s ease-out, .3s ease-out, box-shadow .3s ease-out;
 	-webkit-transform: translate3d(0, 0, 0);
 	transform: translate3d(0, 0, 0);
 	z-index: 100;
@@ -43,6 +41,7 @@
 	border-radius: 4px;
     font-family: var(--font_title);
 }
+
 
 .top-navbar .navbar-light .navbar-nav .nav-item .nav-link:hover{
 	background: #000000;
