--- a/CrazyBurger/static/css/style_final.css
+++ b/CrazyBurger/static/css/style_final.css
@@ -11,36 +11,6 @@ html {
   scroll-behavior: smooth;
 }
 
-*,
-*::after,
-*::before {
-  box-sizing: inherit;
-  margin: 0;
-  padding: 0;
-}
-
-
-
-.dropdown {
-  display: none;
-  font-size: 1rem;
-
-  width: 100%;
-  margin: 0.25rem;
-}
-
-.dropdown button {
-  background-color: #000000;
-  color: #f4ff81;
-  border: none;
-
-  cursor: pointer;
-}
-
-.dropdown button:hover {
-  color: #ffd740;
-}
-
 /*  Estilos para formulario de registro y inicio de sesión  */
 
 .login {
@@ -48,7 +18,7 @@ html {
 
   width: 100%;
   height: 100%;
-  margin: 0;
+  margin-top: 0%;
   padding: 0;
 }
 
@@ -418,7 +388,6 @@ span a:hover {
 }
 
 /*  Estilos para pagína de productos  */
-
 .productos {
   text-align: center;
   font-family: var(--font_title);
@@ -428,6 +397,7 @@ span a:hover {
 }
 
 .container__products {
+  margin-top: 4%;
   display: grid;
   gap: 1rem;
   grid-auto-rows: 22rem;
@@ -436,44 +406,40 @@ span a:hover {
 }
 
 .card_products {
-  width: 200px;
-  height: 274px;
-  padding: 0.8em;
-
+  width: 220px;
+  height: 380px;
+  padding: 1.3em;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
-  background: #f5f5f5;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  background: #fffefe59;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
 .img-product {
-  background-color: #ffcaa6;
-  height: 40%;
-  width: 100%;
-  border-radius: 0.5rem;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  border-radius: 100%;
 }
 
 .img-product img {
   width: 100%;
   height: 100%;
+  border-radius: 100%;
 }
 
 .title-product {
   font-size: 1rem;
   margin: 0.5rem;
-  text-align: center;
+  text-align: justify;
   color: #ff5252;
   font-family: var(--font_title);
 }
 
 .text-product {
   font-family: var(--font_text);
-  text-align: center;
-  padding: 1rem;
-  font-size: 1rem;
+  text-align: justify;
+  font-size: 10px;
 }
 
 .card-footer {
@@ -481,18 +447,17 @@ span a:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 10px;
   border-top: 1px solid #ddd;
 }
 
 .text-price {
-  color: #69f0ae;
+  color: #010d07;
   font-weight: bold;
   font-family: var(--font_title);
 }
 
 .card-button button {
-  padding: 0.5rem;
+  padding: 0.1rem;
   width: 50px;
 
   cursor: pointer;
@@ -520,6 +485,7 @@ span a:hover {
 .card-button a:hover {
   color: #ff5252;
 }
+
 
 /*  Estilos para pagína detalle compra  */
 
@@ -566,7 +532,7 @@ span a:hover {
 .detail__img img {
   width: 300px;
   height: auto;
-  border-radius: 50%;
+  
 }
 
 .form__detail {
@@ -587,9 +553,10 @@ span a:hover {
 }
 
 .form__detail h1 {
-  font-family: var(--font_title);
+  font-family: var(--font_text);
   font-size: 2.5rem;
-  color: #ff5252;
+  color: #fa2828;
+  text-transform: uppercase;
 }
 
 .inputs {
@@ -634,15 +601,18 @@ button {
 }
 
 .nombrePlatillo {
-  color: #000000;
-  font-size: 1rem;
+  font-family: var(--font_title);
+  color: #a66709;
+  font-size: 2rem;
   background-color: #ffffff;
+  text-align: center;
 }
 
 .precioPlatillo {
-  color: #ff5252;
-  font-size: 1rem;
-  background-color: #ffffff;
+  color: #34a806;
+  font-weight: 800;
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 .inputs input[type="submit"] {
@@ -653,6 +623,7 @@ button {
   border-top: #000000;
   border-bottom: solid thick #000000;
   color: #ffffff;
+  cursor: pointer;
 }
 
 .inputs input[type="submit"]:hover {
@@ -885,73 +856,14 @@ select {
 }
 
 /*  Estilos para pagína de perfil de compras  */
-
-.container__compras {
-  width: 100%;
-  height: 100px;
-
+.input_label{
+  border: none;
+  color: black;
+  background-color: #f8f9f9;
+  font-size: 9px;
   text-align: center;
 }
 
-.container__compras h1 {
-  margin: 2rem;
-  font-family: var(--font_title);
-  color: #ff5252;
-}
-
-.container__compras h1 > span {
-  font-family: var(--font_text);
-  color: #69f0ae;
-}
-
-.compras {
-  background-color: #dddddd;
-  border-radius: 0.5rem;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-
-  margin: 0.5rem;
-}
-
-.compras ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin: 0.5rem;
-
-  list-style: none;
-}
-
-.compras ul > li {
-  margin-right: 5rem;
-  font-family: var(--font_title);
-  color: #ff5252;
-}
-
-.compras li > span {
-  display: flex;
-  flex-direction: column;
-  font-family: var(--font_text);
-  color: #000000;
-}
-
-.compras input {
-  width: 98%;
-  margin-bottom: 1rem;
-  text-align: center;
-
-  font-family: var(--font_text);
-
-  border-left: solid thick #000000;
-  border-right: #ffffff;
-  border-top: #ffffff;
-  border-bottom: #ffffff;
-}
 
 .btn__compras {
   display: flex;
@@ -965,6 +877,7 @@ select {
   width: 15%;
   margin: 0.5rem;
 }
+
 
 .btn__inicio {
   background-color: #000000;
@@ -1184,7 +1097,7 @@ i {
 }
 
 .input_unidades {
-  width: 50%;
+  width: 10%;
 }
 
 .inputs button {
