--- a/CrazyBurger/templates/panel.html
+++ b/CrazyBurger/templates/panel.html
@@ -133,7 +133,7 @@
                 <!-- --------------------------------------------------------- -->
 
                 
-                        <a href="#">
+                        <a href="{{url_for('compras.totalcompras')}}">
                             <span class="material-symbols-sharp">point_of_sale</span>
                             <h3>Ventas</h3>
                         </a>
