--- a/CrazyBurger/templates/pedido/order_form.html
+++ b/CrazyBurger/templates/pedido/order_form.html
@@ -26,9 +26,7 @@
         <input type="hidden" name="csrf_token" value="{{csrf_token()}}" />
         <div class="inputs">
           <div class="input_unidades">
-            <button style="border: none; border-radius: 0%;" class="resta" type="button">-</button>
-            <input type="text" name="unidades" id="unidades" value="1">
-            <button style="border: none; border-radius: 0%;" class="suma" type="button">+</button>
+            <input class="input_label" type="text" name="unidades" id="unidades" value="1">
           </div>
         </div>
         <div class="inputs">
