--- a/CrazyBurger/templates/layout.html
+++ b/CrazyBurger/templates/layout.html
@@ -39,9 +39,8 @@
             {% if current_user.is_authenticated %}
             <li class="nav-item"><a class="nav-link" href="{{ url_for('main.productos') }}">Productos</a></li>
 						<li class="nav-item"><a class="nav-link" href="{{ url_for('pedidos.historial_pedidos') }}"><span class="material-symbols-sharp">shopping_cart</span></a></li>
-						<li class="nav-item"><a class="nav-link" href="{{ url_for('pedidos.historial_pedidos') }}"><span class="material-symbols-sharp">shopping_bag</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('main.contact') }}"><span class="material-symbols-sharp">account_circle</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.logout') }}"><span class="material-symbols-sharp">account_circle</span></a></li>
+						<li class="nav-item"><a class="nav-link" href="{{ url_for('compras.comprasGuardadas') }}"><span class="material-symbols-sharp">shopping_bag</span></a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.logout') }}"><span class="material-symbols-sharp">account_circle</span>Log Out</a></li>
             {% endif %}
 					</ul>
 				</div>
