--- a/CrazyBurger/templates/layout.html
+++ b/CrazyBurger/templates/layout.html
@@ -31,10 +31,35 @@
 				<div class="collapse navbar-collapse" id="navbars-rs-food">
 					<ul class="navbar-nav ml-auto">
             {% if not current_user.is_authenticated %}
-						<li class="nav-item active"><a class="nav-link" href="{{ url_for('main.index') }}">Home</a></li>
-						<li class="nav-item"><a class="nav-link" href="{{ url_for('auth.login') }}">Iniciar Sesión</a></li>
-						<li class="nav-item"><a class="nav-link" href="{{ url_for('auth.register') }}">Registrarse</a></li>
-						<li class="nav-item"><a class="nav-link" href="{{ url_for('main.contact') }}">Contacto</a></li>
+
+              {% if active == 'index' %}
+                <li class="nav-item active"><a class="nav-link" href="{{ url_for('main.index') }}">Home</a></li>
+              {% else %}
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.index') }}">Home</a></li>
+              {% endif %}
+
+            
+              {% if active == 'login' %}
+                <li class="nav-item active"><a class="nav-link" href="{{ url_for('auth.login') }}">Iniciar Sesión</a></li>
+              {% else %}
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.login') }}">Iniciar Sesión</a></li>
+              {% endif %}
+            
+            
+              {% if active == 'register' %}
+                <li class="nav-item active"><a class="nav-link" href="{{ url_for('auth.register') }}">Registrarse</a></li>
+              {% else %}
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.register') }}">Registrarse</a></li>
+              {% endif %}
+
+
+              {% if active == 'contact' %}
+                <li class="nav-item active"><a class="nav-link" href="{{ url_for('main.contact') }}">Contacto</a></li>
+              {% else %}
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.contact') }}">Contacto</a></li>
+              {% endif %}
+
+            
             {% endif %}
             {% if current_user.is_authenticated %}
             <li class="nav-item"><a class="nav-link" href="{{ url_for('main.productos') }}">Productos</a></li>
